Prepare Alpha 6 QoL and performance improvements